--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
 
-  background: rgb(0 0 0 / 25%);
+  background: var(--loader-background);
 
   backdrop-filter: blur(2px);
 
